hybrid_v4l2/lib/src/ffi.hybrid_v4l2.dart

// ignore_for_file: always_specify_types
// ignore_for_file: camel_case_types
// ignore_for_file: non_constant_identifier_names

// AUTO GENERATED FILE, DO NOT EDIT.
//
// Generated by `package:ffigen`.
// ignore_for_file: type=lint
import 'dart:ffi' as ffi;

/// Bindings for `hybrid_v4l2`.
///
/// Regenerate bindings with `dart run ffigen --config ffigen.hybrid_v4l2.yaml`.
///
class LibHybridV4L2 {
  /// Holds the symbol lookup function.
  final ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName)
      _lookup;

  /// The symbols are looked up in [dynamicLibrary].
  LibHybridV4L2(ffi.DynamicLibrary dynamicLibrary)
      : _lookup = dynamicLibrary.lookup;

  /// The symbols are looked up with [lookup].
  LibHybridV4L2.fromLookup(
      ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName)
          lookup)
      : _lookup = lookup;

  int hv_open(
    ffi.Pointer<ffi.Char> file,
    int oflag,
  ) {
    return _hv_open(
      file,
      oflag,
    );
  }

  late final _hv_openPtr = _lookup<
          ffi.NativeFunction<ffi.Int Function(ffi.Pointer<ffi.Char>, ffi.Int)>>(
      'hv_open');
  late final _hv_open =
      _hv_openPtr.asFunction<int Function(ffi.Pointer<ffi.Char>, int)>();

  int hv_close(
    int fd,
  ) {
    return _hv_close(
      fd,
    );
  }

  late final _hv_closePtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Int)>>('hv_close');
  late final _hv_close = _hv_closePtr.asFunction<int Function(int)>();

  int hv_ioctl(
    int fd,
    int request,
  ) {
    return _hv_ioctl(
      fd,
      request,
    );
  }

  late final _hv_ioctlPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Int, ffi.UnsignedLong)>>(
          'hv_ioctl');
  late final _hv_ioctl = _hv_ioctlPtr.asFunction<int Function(int, int)>();

  int hv_mmap(
    int fd,
    int offset,
    int len,
    int prot,
    int flags,
    ffi.Pointer<hv_memory> memory,
  ) {
    return _hv_mmap(
      fd,
      offset,
      len,
      prot,
      flags,
      memory,
    );
  }

  late final _hv_mmapPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(ffi.Int, off_t, ffi.Size, ffi.Int, ffi.Int,
              ffi.Pointer<hv_memory>)>>('hv_mmap');
  late final _hv_mmap = _hv_mmapPtr.asFunction<
      int Function(int, int, int, int, int, ffi.Pointer<hv_memory>)>();

  int hv_munmap(
    ffi.Pointer<hv_memory> memory,
  ) {
    return _hv_munmap(
      memory,
    );
  }

  late final _hv_munmapPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Pointer<hv_memory>)>>(
          'hv_munmap');
  late final _hv_munmap =
      _hv_munmapPtr.asFunction<int Function(ffi.Pointer<hv_memory>)>();

  int hv_select(
    int fd,
    ffi.Pointer<timeval> timeout,
  ) {
    return _hv_select(
      fd,
      timeout,
    );
  }

  late final _hv_selectPtr = _lookup<
          ffi.NativeFunction<ffi.Int Function(ffi.Int, ffi.Pointer<timeval>)>>(
      'hv_select');
  late final _hv_select =
      _hv_selectPtr.asFunction<int Function(int, ffi.Pointer<timeval>)>();
}

final class hv_memory extends ffi.Struct {
  external ffi.Pointer<ffi.Void> addr;

  @ffi.Size()
  external int len;
}

typedef off_t = __off_t;
typedef __off_t = ffi.Long;
typedef Dart__off_t = int;

final class timeval extends ffi.Struct {
  @__time_t()
  external int tv_sec;

  @__suseconds_t()
  external int tv_usec;
}

typedef __time_t = ffi.Long;
typedef Dart__time_t = int;
typedef __suseconds_t = ffi.Long;
typedef Dart__suseconds_t = int;

const int HV_O_RDONLY = 0;

const int HV_O_WRONLY = 1;

const int HV_O_RDWR = 2;

const int HV_O_APPEND = 1024;

const int HV_O_ASYNC = 8192;

const int HV_O_CLOEXEC = 524288;

const int HV_O_CREAT = 64;

const int HV_O_DIRECT = 16384;

const int HV_O_DIRECTORY = 65536;

const int HV_O_DSYNC = 4096;

const int HV_O_EXCL = 128;

const int HV_O_LARGEFILE = 0;

const int HV_O_NOATIME = 262144;

const int HV_O_NOCTTY = 256;

const int HV_O_NOFOLLOW = 131072;

const int HV_O_NONBLOCK = 2048;

const int HV_O_PATH = 2097152;

const int HV_O_SYNC = 1052672;

const int HV_O_TMPFILE = 4259840;

const int HV_O_TRUNC = 512;

const int HV_PROT_EXEC = 4;

const int HV_PROT_READ = 1;

const int HV_PROT_WRITE = 2;

const int HV_PROT_NONE = 0;

const int HV_MAP_SHARED = 1;

const int HV_MAP_PRIVATE = 2;

const int HV_MAP_32BIT = 64;

const int HV_MAP_ANON = 32;

const int HV_MAP_ANONYMOUS = 32;

const int HV_MAP_DENYWRITE = 2048;

const int HV_MAP_EXECUTABLE = 4096;

const int HV_MAP_FILE = 0;

const int HV_MAP_FIXED = 16;

const int HV_MAP_GROWSDOWN = 256;

const int HV_MAP_HUGETLB = 262144;

const int HV_MAP_LOCKED = 8192;

const int HV_MAP_NONBLOCK = 65536;

const int HV_MAP_NORESERVE = 16384;

const int HV_MAP_POPULATE = 32768;

const int HV_MAP_STACK = 131072;
